New images and latest fixes

--- a/src/_index.html
+++ b/src/_index.html
@@ -256,7 +256,8 @@ var CURRENTDATA = [
   { label: "2012",  requirement: 8800000000, targeted: 62000000},
   { label: "2013",  requirement: 12900000000, targeted: 73000000},
   { label: "2014",  requirement: 16800000000, targeted: 76000000},
-  { label: "2015", requirement: 20100000000, targeted: 87600000}];
+  { label: "2015", requirement: 19900000000, targeted: 82500000},
+  { label: "2016", requirement: 20100000000, targeted: 87600000}];
 
 var oldDateFormat = d3.time.format("%m-%Y");
 
